--- a/signin.html
+++ b/signin.html
@@ -2,25 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sign in</title>
+  <title>Redirecting…</title>
+  <!-- ohereza ako kanya kuri home -->
+  <meta http-equiv="refresh" content="0; url=/LesNGANYIRA/home.html">
+  <meta name="robots" content="noindex">
   <style>
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial; background:#f8fafc; margin:0}
-    .wrap{max-width:520px;margin:10vh auto;padding:24px;border-radius:16px;background:#fff;border:1px solid #e2e8f0;box-shadow:0 6px 20px rgba(0,0,0,.06);text-align:center}
-    a.btn{display:inline-block;padding:12px 18px;border-radius:10px;border:0;background:#111;color:#fff;text-decoration:none;font-weight:600}
-    a.btn:hover{opacity:.9}
-    p{color:#475569}
+    body{font-family:system-ui,Inter,Segoe UI,Roboto;display:grid;place-items:center;height:100vh;margin:0;background:#f8fafc}
+    a{color:#111;font-weight:600;text-decoration:none}
   </style>
 </head>
 <body>
-  <main class="wrap">
-    <h1 style="margin:0 0 8px">Welcome back</h1>
-    <p>Click below to continue.</p>
-
-    <!-- Koresha URL yuzuye ya GitHub Pages -->
-    <a class="btn" href="https://lesnganyira.github.io/LesNGANYIRA/app.html">Sign in →</a>
-
-    <p style="margin-top:14px;font-size:12px">If nothing happens, copy-paste the link above into a new tab.</p>
-  </main>
+  <div>
+    <p>Going to home…</p>
+    <a href="/LesNGANYIRA/home.html">Click here if you’re not redirected</a>
+  </div>
 </body>
 </html>
